fix: header bottom overflow on menu expanded mobile

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -86,7 +86,7 @@
 		grid-template: "a b" auto
 							"a c" auto / auto 400px;
 		height: min-content;
-		padding-bottom: lib.$layout-spacing-large;
+		padding-bottom: lib.$layout-spacing-large * 2;
 
 		> .searchColumn {
 			grid-area: a;
